# SpaceWireZMQ

./: .gitignore  meson.build  meson_options.txt
manual_tests/: meson.build
manual_tests/star_dundee/: main.cpp
src/: PacketQueue.hpp  SpaceWireBridge.hpp  SpaceWireBridges.hpp  SpaceWireZMQ.hpp  ZMQClient.hpp  ZMQServer.cpp  ZMQServer.hpp  callable.hpp  main.cpp
src/bridges/: StarAPI.hpp  StarDundee.cpp  StarDundee.hpp
src/config/: Config.hpp  json_io.hpp  yaml_io.hpp
subprojects/: catch2.wrap  yaml-cpp.wrap
tests/: PythonScript.py  meson.build
tests/client/: main.cpp
tests/common/: MockBridge.hpp
tests/json_cppdict/: main.cpp
tests/server/: main.cpp
tests/yaml_cppdict/: main.cpp
